opam-version: "2.0"
maintainer: "Larry Darryl Lee Jr."
authors: [
  "Larry Darryl Lee Jr."
]
synopsis: "PPX for calculating statistics for record field values"
description: """
Defines a PPX that makes is simple to calculate statistics for record field values.
"""
license: "GPL-3.0-or-later"
tags: []
homepage: ""
doc: ""
bug-reports: ""
depends: [
  "ocaml"
  "dune"
  "ocaml-lsp-server"
  "ocamlformat" { = "0.15.0" }
  "ppx_jane"
  "core_kernel"
  "core"
  "lwt"
  "lwt_ppx"
  "ppx_blob"
  "uuidm"
  "yojson"
  "ppx_deriving_yojson"
  "ocaml-compiler-libs"
]
build: ["dune" "build" "-p" name "-j" jobs]